fix issue wiith animation when flipping directions. Set origin point for flip in center, played with syntax for updating animations, ended up keeping everything the same after an hour of work.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ endif()
 project ("VideoGames")
 
 # Add source to this project's executable.
-add_executable (VideoGames "Header/stdafx.h" "source/stdafx.cpp" "source/Game.cpp" "Header/Game.h" "source/main.cpp" "source/Player.cpp" "Header/Player.h")
+add_executable (VideoGames "Header/stdafx.h" "source/stdafx.cpp" "source/Game.cpp" "Header/Game.h" "source/main.cpp" "source/Player.cpp" "Header/Player.h" "source/Tile.cpp" "Header/TileMap.h" "source/TileMap.cpp")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET VideoGames PROPERTY CXX_STANDARD 20)
